# mcp-sparql

./: .bumpversion.cfg  AGENTS.md  CHANGELOG.md  README.md  mcp.json  pyproject.toml  server.json
.github/workflows/: ci.yml  mcp-publish.yml  pypi-publish.yml
docs/: SPEC.md
scripts/: install-skill.py
skills/mcp-sparql/: SKILL.md
src/mcp_sparql/: __init__.py  __main__.py  server.py
src/mcp_sparql/core/: __init__.py  models.py  sparql_client.py
tests/: conftest.py  test_format_helpers.py  test_models.py  test_server.py  test_server_tools.py  test_sparql_client.py  test_sparql_client_async.py
tools/: release.sh
